--- a/src/main/resources/templates/add_student.html
+++ b/src/main/resources/templates/add_student.html
@@ -3,7 +3,7 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout}">
 <head>
   <meta charset="UTF-8">
-  <Ime>Dnevnik - Dodaj studenta</Ime>
+  <Ime>eDnevnik - Dodaj studenta</Ime>
 </head>
 <body>
 <div layout:fragment="content">
@@ -13,22 +13,20 @@
 
   <form th:action="@{/students/add}" method="post" th:object="${student}">
     <div class="form-group row">
-      <label class="col-4 col-form-label">Ime Studenta: </label>
+      <label class="col-4 col-form-label">Ime studenta: </label>
       <div class="col-8">
-        <input th:unless="${#fields.hasErrors('ime')}" type="text" th:field="*{ime}" class="form-control"/>
-        <input th:if="${#fields.hasErrors('ime')}" type="text" th:field="*{ime}"
-               class="form-control  is-invalid"/>
-        <div th:if="${#fields.hasErrors('ime')}" th:errors="*{ime}" class="invalid-feedback"></div>
+        <input th:unless="${#fields.hasErrors('Ime')}" type="text" th:field="*{Ime}" class="form-control"/>
+
+        <div th:if="${#fields.hasErrors('Ime')}" th:errors="*{Ime}" class="invalid-feedback"></div>
       </div>
     </div>
 
     <div class="form-group row">
       <label class="col-4 col-form-label">Prezime studenta: </label>
       <div class="col-8">
-        <input th:unless="${#fields.hasErrors('prezime')}" type="text" th:field="*{prezime}" class="form-control"/>
-        <input th:if="${#fields.hasErrors('prezime')}" type="text" th:field="*{prezime}"
-               class="form-control  is-invalid"/>
-        <div th:if="${#fields.hasErrors('prezime')}" th:errors="*{prezime}" class="invalid-feedback"></div>
+        <input th:unless="${#fields.hasErrors('Prezime')}" type="text" th:field="*{Prezime}" class="form-control"/>
+
+        <div th:if="${#fields.hasErrors('Prezime')}" th:errors="*{Prezime}" class="invalid-feedback"></div>
       </div>
     </div>
 
@@ -37,19 +35,33 @@
     <div class="form-group row">
       <label class="col-4 col-form-label">Ocjena Matematike </label>
       <div class="col-8">
-        <input th:unless="${#fields.hasErrors('matematika')}" type="number" th:field="*{matematika}" class="form-control"/>
-        <input th:if="${#fields.hasErrors('matematika')}" type="number" th:field="*{matematika}"
-               class="form-control  is-invalid"/>
-        <div th:if="${#fields.hasErrors('matematika')}" th:errors="*{matematika}" class="invalid-feedback"></div>
+        <input th:unless="${#fields.hasErrors('Matematika')}" type="number" th:field="*{Matematika}" class="form-control"/>
+
+        <div th:if="${#fields.hasErrors('Matematika')}" th:errors="*{Matematika}" class="invalid-feedback"></div>
       </div>
     </div>
     <div class="form-group row">
       <label class="col-4 col-form-label">Ocjena Hrvatski </label>
       <div class="col-8">
-        <input th:unless="${#fields.hasErrors('hrvatski_jezik')}" type="number" th:field="*{hrvatski_jezik}" class="form-control"/>
-        <input th:if="${#fields.hasErrors('hrvatski_jezik')}" type="number" th:field="*{hrvatski_jezik}"
-               class="form-control  is-invalid"/>
-        <div th:if="${#fields.hasErrors('hrvatski_jezik')}" th:errors="*{hrvatski_jezik}" class="invalid-feedback"></div>
+        <input th:unless="${#fields.hasErrors('Hrvatski_jezik')}" type="number" th:field="*{Hrvatski_jezik}" class="form-control"/>
+
+        <div th:if="${#fields.hasErrors('Hrvatski_jezik')}" th:errors="*{Hrvatski_jezik}" class="invalid-feedback"></div>
+      </div>
+    </div>
+    <div class="form-group row">
+      <label class="col-4 col-form-label">Ocjena Engleski jezik </label>
+      <div class="col-8">
+        <input th:unless="${#fields.hasErrors('Engleski_jezik')}" type="number" th:field="*{Engleski_jezik}" class="form-control"/>
+
+        <div th:if="${#fields.hasErrors('Engleski_jezik')}" th:errors="*{Engleski_jezik}" class="invalid-feedback"></div>
+      </div>
+    </div>
+    <div class="form-group row">
+      <label class="col-4 col-form-label">Ocjena Fizika </label>
+      <div class="col-8">
+        <input th:unless="${#fields.hasErrors('Fizika')}" type="number" th:field="*{Fizika}" class="form-control"/>
+
+        <div th:if="${#fields.hasErrors('Fizika')}" th:errors="*{Fizika}" class="invalid-feedback"></div>
       </div>
     </div>
 
