--- a/src/main/resources/templates/edit_student.html
+++ b/src/main/resources/templates/edit_student.html
@@ -14,20 +14,18 @@
     <div class="form-group row">
       <label class="col-4 col-form-label">Ime Studenta: </label>
       <div class="col-8">
-        <input th:unless="${#fields.hasErrors('Ime')}" type="text" th:field="*{Ime}" class="form-control"/>
-        <input th:if="${#fields.hasErrors('Ime')}" type="text" th:field="*{Ime}"
-               class="form-control  is-invalid"/>
-        <div th:if="${#fields.hasErrors('Ime')}" th:errors="*{Ime}" class="invalid-feedback"></div>
+
+          <input type="email" th:field="*{Ime}" class="form-control" required />
+        </div>
       </div>
     </div>
 
     <div class="form-group row">
       <label class="col-4 col-form-label">Prezime studenta: </label>
       <div class="col-8">
-        <input th:unless="${#fields.hasErrors('Prezime')}" type="text" th:field="*{Prezime}" class="form-control"/>
-        <input th:if="${#fields.hasErrors('Prezime')}" type="text" th:field="*{Prezime}"
-               class="form-control  is-invalid"/>
-        <div th:if="${#fields.hasErrors('Prezime')}" th:errors="*{Prezime}" class="invalid-feedback"></div>
+
+          <input type="email" th:field="*{Prezime}" class="form-control" required />
+        </div>
       </div>
     </div>
 
