--- a/src/main/resources/templates/add_student.html
+++ b/src/main/resources/templates/add_student.html
@@ -33,12 +33,14 @@
 
 
     <div class="form-group row">
-      <label class="col-4 col-form-label">Ocjena Matematike </label>
-      <div class="col-8">
-        <input th:unless="${#fields.hasErrors('Matematika')}" type="number" th:field="*{Matematika}" class="form-control"/>
-
-        <div th:if="${#fields.hasErrors('Matematika')}" th:errors="*{Matematika}" class="invalid-feedback"></div>
-      </div>
+      <label for="students">Ocjena Matematike</label>
+      <select id="students" name="cars" th:field="*{Matematika}">
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+      </select>
     </div>
     <div class="form-group row">
       <label class="col-4 col-form-label">Ocjena Hrvatski </label>
