--- a/src/main/resources/templates/user_form.html
+++ b/src/main/resources/templates/user_form.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 	<meta charset="ISO-8859-1">
-	<title>Edit User</title>
+	<title>Uredi korisnika</title>
 	<link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
 	<script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
 	<script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
@@ -10,7 +10,7 @@
 <body>
 	<div class="container text-center">
 		<div>
-			<h1>Edit User</h1>
+			<h1>Uredi korisnika</h1>
 		</div>
 		<form th:action="@{/users/save}" th:object="${user}" 
 			method="post" style="max-width: 600px; margin: 0 auto;">
@@ -22,7 +22,6 @@
 					<input type="email" th:field="*{email}" class="form-control" required />
 				</div>
 			</div>
-
 
 			
 			<div class="form-group row">
