--- a/src/main/resources/templates/edit_student.html
+++ b/src/main/resources/templates/edit_student.html
@@ -10,24 +10,24 @@
     <h1>Uredi podatke studenta</h1>
   </div>
 
-  <form th:action="@{'/students/update/' + ${student_id}}" method="post" th:object="${students}">
-    <div class="form-group row">
-      <label class="col-4 col-form-label">Ime Studenta: </label>
-      <div class="col-8">
+  <form th:action="@{/students/update}" method="post" th:object="${students}">
+    <input type="hidden" th:field="*{student_id}" />
 
-          <input type="text" th:field="*{Ime}" class="form-control" required />
-        </div>
+    <div class="form-group row">
+      <label class="col-4 col-form-label">Ime studenta: </label>
+      <div class="col-8">
+        <input type="text" th:field="*{Ime}" class="form-control"
+               required minlength="2" maxlength="20"/>
       </div>
     </div>
 
-    <div class="form-group row">
-      <label class="col-4 col-form-label">Prezime studenta: </label>
-      <div class="col-8">
-
-          <input type="text" th:field="*{Prezime}" class="form-control" required />
-        </div>
-      </div>
+    <<div class="form-group row">
+    <label class="col-4 col-form-label">Prezime studenta: </label>
+    <div class="col-8">
+      <input type="text" th:field="*{Prezime}" class="form-control"
+             required minlength="2" maxlength="20"/>
     </div>
+  </div>
 
 
 
