--- a/src/main/resources/templates/user_form.html
+++ b/src/main/resources/templates/user_form.html
@@ -12,8 +12,8 @@
 		<div>
 			<h1>Uredi korisnika</h1>
 		</div>
-		<form th:action="@{/users/save}" th:object="${user}" 
-			method="post" style="max-width: 600px; margin: 0 auto;">
+		<form th:action="@{/users/save}"  th:object="${user}" method="post"
+			 style="max-width: 600px; margin: 0 auto;">
 			<input type="hidden" th:field="*{id}" />
 		<div class="m-3">
 			<div class="form-group row">
