--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
       data-wf-site="63e90e48cd3678bec76a2111">
 <head>
     <meta charset="utf-8"/>
-    <title>Paolo&#x27;s Sublime Site</title>
+    <title>eDnevnik</title>
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <meta content="Webflow" name="generator"/>
     <link href="https://fonts.googleapis.com" rel="preconnect"/>
