--- a/src/main/resources/templates/edit_student.html
+++ b/src/main/resources/templates/edit_student.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout}">
 <head>
   <meta charset="UTF-8">
-  <Ime>Dnevnik - Ažuriraj podatke studenta</Ime>
+  <title>eDnevnik - Ažuriraj podatke studenta</title>
 </head>
 <body>
 <div layout:fragment="content">
@@ -21,21 +21,16 @@
       </div>
     </div>
 
-
     <div class="form-group row">
-    <label class="col-4 col-form-label">Prezime studenta: </label>
-    <div class="col-8">
-      <input type="text" id="prezime" th:field="*{prezime}" class="form-control"
-             required minlength="2" maxlength="20"/>
+      <label class="col-4 col-form-label">Prezime studenta: </label>
+      <div class="col-8">
+        <input type="text" id="prezime" th:field="*{prezime}" class="form-control"
+               required minlength="2" maxlength="20"/>
+      </div>
     </div>
-  </div>
-
-
-
 
     <div class="form-group row">
       <label for="matematika">Ocjena Matematike</label>
-
       <select id="matematika" th:field="*{matematika}" required>
         <option value="1">1</option>
         <option value="2">2</option>
@@ -44,9 +39,9 @@
         <option value="5">5</option>
       </select>
     </div>
+
     <div class="form-group row">
       <label for="hrvatski_jezik">Ocjena Hrvatski jezik</label>
-
       <select id="hrvatski_jezik" th:field="*{hrvatski_jezik}" required>
         <option value="1">1</option>
         <option value="2">2</option>
@@ -55,9 +50,9 @@
         <option value="5">5</option>
       </select>
     </div>
+
     <div class="form-group row">
       <label for="engleski_jezik">Ocjena Engleski jezik</label>
-
       <select id="engleski_jezik" th:field="*{engleski_jezik}" required>
         <option value="1">1</option>
         <option value="2">2</option>
@@ -66,10 +61,10 @@
         <option value="5">5</option>
       </select>
     </div>
+
     <div class="form-group row">
       <label for="fizika">Ocjena Fizika</label>
-
-      <select id="fizika" name="cars" th:field="*{fizika}">
+      <select id="fizika" th:field="*{fizika}" required>
         <option value="1">1</option>
         <option value="2">2</option>
         <option value="3">3</option>
@@ -77,6 +72,7 @@
         <option value="5">5</option>
       </select>
     </div>
+
     <div>
       <button type="submit" class="btn btn-primary">Uredi podatke studenta</button>
     </div>
