--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,7 +3,7 @@
       data-wf-site="63ea437b16194f6f3281acdc">
 <head>
     <meta charset="utf-8"/>
-    <title>eDnevnik2</title>
+    <title>eDnevnik</title>
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <meta content="Webflow" name="generator"/>
     <link href="https://uploads-ssl.webflow.com/63ea437b16194f6f3281acdc/css/paolos-stunning-site-875f46.webflow.770a04a90.css"
